[package]
name = "fluent-ui"
version = "0.1.0"
authors = ["arrayJY <ji957455952@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skulpin = { version = "0", default-features = false, features = ["skia_complete", "skulpin_winit"] }
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
typetag = "0.1.6"